finally can read from text file and execute function

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/wehbs/liri-node-app#readme",
   "dependencies": {
+    "figlet": "^1.2.0",
     "node-spotify-api": "^1.0.7",
     "request": "^2.83.0",
     "twitter": "^1.7.1"
